fix: Reset jobFlowRun's host if it reloads by a new worker